Actual basic folder structure.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>FastBuy - Home</title>
 
     <link rel="stylesheet" href="assets/css/general.css">
+    <script src="assets/javascript/main.js"></script>
 </head>
 <body>
-    <h1>Hello, world</h1>
+    <header>
+        <img id="header-logo" src="assets/imgs/Imagotipo 1.svg" alt="Logo">
+        <h1>FastBuy</h1>
+    </header>
 </body>
 </html>
