Adds an animation to header.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0&appId=327242687934388&autoLogAppEvents=1"
         nonce="Yo0IftVP"></script>
     <header>
-        <img id="header-logo" src="assets/imgs/Imagotipo 1.svg" alt="Logo">
-        <h1>FastBuy</h1>
+        <div id="main-header">
+            <h1 class="text-anim-t">FastBuy</h1>
+            <img class="text-anim-t" id="header-logo" src="assets/imgs/Imagotipo 1.svg" alt="Logo">
+        </div>
 
-        <p>The eMarket of your choice</p>
+        <p><em>The eMarket of your choice</em></p>
     </header>
     <main>
         <section id="details">
