--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <section id="details">
             <div class="mision">
                 <h2>Mision:</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sunt
-                    similique eligendi rem saepe sint. Animi sit iure consequuntur aperiam
-                    perferendis perspiciatis nam nihil, ipsum laborum! Temporibus
-                    laudantium ut excepturi.</p>
+                <p>La misión se focaliza en la creación y gestión de servicios en nuestra plataforma, orientados principalmente en la actividad económica de los pequeños comercios, tanto como a las personas particulares.
+Buscamos ofrecer servicios de alto valor añadido y confiables, en los que nuestro equipo de profesionales estará a su entera disposición para ayudarle en todo momento.
+Ofrecer un trato personal, cercano y directo, disponiendo siempre de la flexibilidad adecuada a sus necesidades. En un entorno en el que cada vez existe más intrusismo, nuestra empresa siempre le acompañará buscando el camino de la excelencia personal y profesional. 
+</p>
             </div>
             <div class="vision">
                 <h2>Vision:</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit sunt
-                    similique eligendi rem saepe sint. Animi sit iure consequuntur aperiam
-                    perferendis perspiciatis nam nihil, ipsum laborum! Temporibus
-                    laudantium ut excepturi.</p>
+                <p>La visión principal de FastBuy, es convertirse en la plataforma número 1 de hospedaje para compra y venta de productos en Nicaragua, 
+                    ya sea de terceros o de una empresa específica, con la tendencia de incentivar la unión de los pequeños artesanos de todo el país, en un solo portal, 
+                    promoviendo la actividad económica Nacional.</p>
+
             </div>
         </section>
         <section id="members">
@@ -58,6 +58,18 @@
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
                     <h3>Member 3</h3>
+                </li>
+                <li class="person-info">
+                    <img class="person-face" src="https://picsum.photos/200" alt="Cara">
+                    <h3>Member 4</h3>
+                </li>
+                <li class="person-info">
+                    <img class="person-face" src="https://picsum.photos/200" alt="Cara">
+                    <h3>Member 5</h3>
+                </li>
+                <li class="person-info">
+                    <img class="person-face" src="https://picsum.photos/200" alt="Cara">
+                    <h3>Member 6</h3>
                 </li>
             </ul>
         </section>
