Changes the main logo.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         nonce="Yo0IftVP"></script>
     <header>
         <div id="main-header">
-            <h1 class="text-anim-t">FastBuy</h1>
-            <img class="text-anim-t" id="header-logo" src="assets/imgs/Imagotipo 1.svg" alt="Logo">
+            <img class="text-anim-t" id="header-logo" src="assets/imgs/fastbuy.svg" alt="Logo">
         </div>
 
         <p><em>The eMarket of your choice</em></p>
