--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         nonce="Yo0IftVP"></script>
     <header>
         <div id="main-header">
+            <h1 class="text-anim-t">FastBuyNic</h1>
             <img class="text-anim-t" id="header-logo" src="assets/imgs/fastbuy.svg" alt="Logo">
         </div>
 
