Edits the structure of the html, and improves styling and consistency.

--- a/index.html
+++ b/index.html
@@ -24,54 +24,95 @@
         <p><em>The eMarket of your choice</em></p>
     </header>
     <main>
+        <section id="brands">
+            <h2 id="brand-title">Empowering Brands!</h2>
+            <div class="brand-logos">
+                <img src=assets/imgs/fastbuy-brand.png" alt="FastBuy">
+                <img src="assets/img/pixelart-brand.png" alt="PixelArt">
+            </div>
+        </section>
+        <section id="products">
+            <h2>Taking our products to the next levels</h2>
+            <img src="assets/imgs/carrousel.png" alt="Products">
+        </section>
         <section id="members">
             <h2>Who are we?</h2>
 
             <!-- TODO: Yeah... who are we?
-            
                 We need the order of the people, and the pictures of their faces.-->
             <ul>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 1</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 2</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 3</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 4</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 5</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <h3>Member 6</h3>
+                    <div>
+                        <p class="person-name"><b>Señor José</b></p>
+                    </div>
                 </li>
             </ul>
         </section>
         <section id="details">
-            <div class="mision">
-                <h2>Mision:</h2>
-                <p>La misión se focaliza en la creación y gestión de servicios en nuestra plataforma, orientados principalmente en la actividad económica de los pequeños comercios, tanto como a las personas particulares.
-Buscamos ofrecer servicios de alto valor añadido y confiables, en los que nuestro equipo de profesionales estará a su entera disposición para ayudarle en todo momento.
-Ofrecer un trato personal, cercano y directo, disponiendo siempre de la flexibilidad adecuada a sus necesidades. En un entorno en el que cada vez existe más intrusismo, nuestra empresa siempre le acompañará buscando el camino de la excelencia personal y profesional. 
-</p>
+            <h2>Our Goals</h2>
+            <div id="goals-container">
+                <div class="mision">
+                    <h3>Mision:</h3>
+                    <p>La misión se focaliza en la creación y gestión de servicios en nuestra plataforma, orientados principalmente en la actividad económica de los pequeños comercios, tanto como a las personas particulares.
+    Buscamos ofrecer servicios de alto valor añadido y confiables, en los que nuestro equipo de profesionales estará a su entera disposición para ayudarle en todo momento.
+    Ofrecer un trato personal, cercano y directo, disponiendo siempre de la flexibilidad adecuada a sus necesidades. En un entorno en el que cada vez existe más intrusismo, nuestra empresa siempre le acompañará buscando el camino de la excelencia personal y profesional. 
+    </p>
+                </div>
+                <div class="vision">
+                    <h3>Vision:</h3>
+                    <p>La visión principal de FastBuy, es convertirse en la plataforma número 1 de hospedaje para compra y venta de productos en Nicaragua, 
+                        ya sea de terceros o de una empresa específica, con la tendencia de incentivar la unión de los pequeños artesanos de todo el país, en un solo portal, 
+                        promoviendo la actividad económica Nacional.</p>
+    
+                </div>
             </div>
-            <div class="vision">
-                <h2>Vision:</h2>
-                <p>La visión principal de FastBuy, es convertirse en la plataforma número 1 de hospedaje para compra y venta de productos en Nicaragua, 
-                    ya sea de terceros o de una empresa específica, con la tendencia de incentivar la unión de los pequeños artesanos de todo el país, en un solo portal, 
-                    promoviendo la actividad económica Nacional.</p>
-
+        </section>
+        <section id="join-us">
+            <h2>You can join us!</h2>
+            <div class="join-panel">
+                <p class="join-us-txt">
+                    <img src="assets/imgs/store.svg" alt="store" class="join-icon">
+                    <span>Do you have a store?</span>
+                </p>
             </div>
+            <div class="join-panel">
+                <p class="join-us-txt">
+                    <img src="assets/imgs/tshirt.svg" alt="tshirt" class="join-icon">
+                    <span>Products you want to sell?</span>
+                </p>
+            </div>
+            <a href="#" class="join-us-cto">Become a partner</a>
         </section>
         <section id="facebook-feed">
             <h2>Follow us on facebook!</h2>
