Adds the temporal image for the carrousel.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
         <section id="products">
             <h2>Taking our products to the next levels</h2>
-            <img src="assets/imgs/carrousel.png" alt="Products">
+            <img src="assets/imgs/calzado.png" alt="Products">
         </section>
         <section id="members">
             <h2>Who are we?</h2>
