Adds styling for the section "join us".

--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
         <section id="join-us">
             <h2>You can join us!</h2>
             <div class="join-panel">
+                <img src="assets/imgs/store.svg" alt="store" class="join-icon">
                 <p class="join-us-txt">
-                    <img src="assets/imgs/store.svg" alt="store" class="join-icon">
                     <span>Do you have a store?</span>
                 </p>
             </div>
             <div class="join-panel">
+                <img src="assets/imgs/tshirt.svg" alt="tshirt" class="join-icon">
                 <p class="join-us-txt">
-                    <img src="assets/imgs/tshirt.svg" alt="tshirt" class="join-icon">
                     <span>Products you want to sell?</span>
                 </p>
             </div>
-            <a href="#" class="join-us-cto">Become a partner</a>
+            <a href="#" id="join-us-cto">Become a partner</a>
         </section>
         <section id="facebook-feed">
             <h2>Follow us on facebook!</h2>
