Styling for the write-us section.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <span>Products you want to sell?</span>
                 </p>
             </div>
-            <a href="#" id="join-us-cto">Become a partner</a>
+            <a href="#" class="button-cto" id="join-us-cto">Become a partner</a>
         </section>
         <section id="facebook-feed">
             <h2>Follow us on facebook!</h2>
@@ -129,24 +129,25 @@
         </section>
     </main>
     <footer>
-        <section id="write-use">
-            <h2>Write us a message!</h2>
+        <section id="write-us">
+            <h3>Write us a message!</h3>
             <form>
                 <label for="name">Your Name</label>
                 <input name="name" type="text">
                 <br>
                 <label for="message">What do you wanna tell us?</label>
                 <textarea name="message"></textarea>
+                <a href="#" class="button-cto">Enviar</a>
             </form>
         </section>
         <section id="contact-info">
             <div id="social">
-                <h2>Social Networks</h2>
+                <h3>Social Networks</h3>
                 <div>Facebook: <a href="https://www.facebook.com/FastBuyNic">@FastBuyNic</a></div>
                 <div>Instagram: <a href="https://www.instagram.com/fastbuynic">@fastbuynic</a></div>
             </div>
             <div id="direct">
-                <h2>Direct Contact</h2>
+                <h3>Direct Contact</h3>
                 <div>Phone Number: <a href="#">+505 8532 6125</a></div>
                 <div>Email: <a href="mailto:buyfast60@gmail.com">buyfast60@gmail.com</a></div>
             </div>
