Adds brand logos and styling for them.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section id="brands">
             <h2 id="brand-title">Empowering Brands!</h2>
             <div class="brand-logos">
-                <img src=assets/imgs/fastbuy-brand.png" alt="FastBuy">
-                <img src="assets/img/pixelart-brand.png" alt="PixelArt">
+                <img src="assets/imgs/fastbuy-brand.svg" alt="FastBuy">
+                <img src="assets/imgs/pixelart-brand.svg" alt="PixelArt">
             </div>
         </section>
         <section id="products">
