Adding some effect in the member Section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
             <ul>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
-                    <div>
-                        <p class="person-name"><b>Señor José</b></p>
-                    </div>
+                        <div class="job-title">
+                            <p class="person-name">Señor </p>
+                            <h4>Lider IT</h4>
+                        </div>
+                        <div class="description">
+                            <p>Lorem ipsum dolor sit.</p>
+                        </div>
                 </li>
                 <li class="person-info">
                     <img class="person-face" src="https://picsum.photos/200" alt="Cara">
